Finish albums and artist index pages, refactor and repair album show page, refactor and simplify player, refactor jbuilder views for efficiency, add sidebar links to pages

--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "spotify",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "react-lite": "file:../ReactLite",
-    "react-redux-lite": "file:../ReactReduxLite",
-    "react-router-lite": "file:../ReactRouterLite",
-    "redux-lite": "file:../ReduxLite",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
-  },
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "version": "1.0.0",
-  "main": "react/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "start": "webpack --watch --mode=development"
-  },
-  "author": "Andy Wynkoop",
-  "license": "ISC"
+	"name": "spotify",
+	"private": true,
+	"dependencies": {
+		"@babel/core": "^7.2.0",
+		"@babel/plugin-proposal-class-properties": "^7.2.1",
+		"@babel/preset-env": "^7.2.0",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.4",
+		"socket.io-client": "^2.3.0",
+		"webpack": "^4.27.1",
+		"webpack-cli": "^3.1.2"
+	},
+	"description": "This README would normally document whatever steps are necessary to get the application up and running.",
+	"version": "1.0.0",
+	"main": "react/index.js",
+	"directories": {
+		"lib": "lib",
+		"test": "test"
+	},
+	"scripts": {
+		"start": "webpack --watch --mode=development"
+	},
+	"author": "Andy Wynkoop",
+	"license": "ISC"
 }
