Add search functionality, refactor routing to support more nesting, create namespaced routes for album, artist, and playlist views,  fix minor bugs related to event listeners and youtube, add minor navigation functionality

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,9 @@ apiKey.js
 /public/assets
 .byebug_history
 
+secret.js
+main.js
+main.js.map
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
