Optimize music-related queries by eager fetching active_storage relations and associated data. Add playlist show page. modify album and playlist player functionality to set correct queue.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ apiKey.js
 secret.js
 main.js
 main.js.map
+_todos.md
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
