Make file paths more explicit to hopefully help rails

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 	},
 	"scripts": {
 		"start": "webpack --watch --mode=development",
-		"postinstall": "webpack --mode=production"
+		"postinstall": "webpack --mode=production",
+		"build": "webpack --mode=production"
 	},
 	"author": "Andy Wynkoop",
 	"license": "ISC"
