--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.4",
 		"socket.io-client": "^2.3.0",
+		"url-pattern": "^1.0.3",
 		"webpack": "^4.27.1",
 		"webpack-cli": "^3.1.2"
 	},
