--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 	},
 	"scripts": {
 		"start": "webpack --watch --mode=development",
-		"build": "webpack --mode=production"
+		"build": "webpack --mode=production",
+		"postinstall": "webpack --mode=prduction"
 	},
 	"author": "Andy Wynkoop",
 	"license": "ISC"
