--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.4",
 		"socket.io-client": "^2.3.0",
+		"url-pattern": "^1.0.3",
 		"webpack": "^4.27.1",
 		"webpack-cli": "^3.1.2"
 	},
@@ -19,11 +20,12 @@
 		"test": "test"
 	},
 	"engines": {
-		"node": "12.5.0",
-		"npm": "6.9.0"
+		"node": "8.9.4",
+		"npm": "5.6.0"
 	},
 	"scripts": {
 		"start": "webpack --watch --mode=development",
+		"build": "webpack --mode=production",
 		"postinstall": "webpack --mode=production"
 	},
 	"author": "Andy Wynkoop",
